# MQTTHomeKeyLock

./: .gitignore  Dockerfile  README.md  accessory.py  configuration.json  homekey.py  main.py  mqtt.py  requirements.txt  service.py
.github/workflows/: docker-image.yml
apple-home-key-reader/: configuration.json
apple-home-key-reader-example/: package.json
code/: accessory.py  main.py  mqtt.py  prometheus.py  service.py
hap/: lock.js
old/hap/: lock.js  package.json
old/pn532/: broadcast_frame_contactless_frontend.py  util.py
old/pn532_reader/: main.py  tom.py
old/src/: mqtt-lock-code.js
pn532/: main.py
pn532_reader/: broadcast_frame_contactless_frontend.py  main.py
rfid-reader/: .gitignore
rfid-reader/hap/: lock.js  package-lock.json
rfid-reader/pn532_reader/: main.py  pyproject.toml
src/: mqtt-lock.js
